--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="IE_Search_Shortcuts.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="IE Search Shortcuts" Height="350" Width="561">
+    <Grid Width="536">
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="12,276,0,0" Name="nameTxtBox" VerticalAlignment="Top" Width="120" Text="Add New Shortcut" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="nameTxtBox_GotFocus" LostFocus="nameTxtBox_LostFocus" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="138,276,0,0" Name="keywordTxtBox" VerticalAlignment="Top" Width="120" Text="Keyword" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="keywordTxtBox_GotFocus" LostFocus="keywordTxtBox_LostFocus" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="264,276,0,0" Name="urlTxtBox" VerticalAlignment="Top" Width="227" Text="URL with %s in place of query" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="urlTxtBox_GotFocus" LostFocus="urlTxtBox_LostFocus" KeyDown="urlTxtBox_KeyDown" />
+        <ListBox Height="258" HorizontalAlignment="Left" Margin="12,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="512" />
+        <Button Content="+" Height="23" HorizontalAlignment="Left" Margin="497,276,0,0" Name="addBtn" VerticalAlignment="Top" Width="27" Click="addBtn_Click" />
     </Grid>
 </Window>
