--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -1,12 +1,20 @@
 ﻿<Window x:Class="IE_Search_Shortcuts.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="IE Search Shortcuts" Height="350" Width="561">
+        Title="IE Search Shortcuts" Height="350" Width="561" Loaded="Window_Loaded">
     <Grid Width="536">
         <TextBox Height="23" HorizontalAlignment="Left" Margin="12,276,0,0" Name="nameTxtBox" VerticalAlignment="Top" Width="120" Text="Add New Shortcut" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="nameTxtBox_GotFocus" LostFocus="nameTxtBox_LostFocus" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="138,276,0,0" Name="keywordTxtBox" VerticalAlignment="Top" Width="120" Text="Keyword" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="keywordTxtBox_GotFocus" LostFocus="keywordTxtBox_LostFocus" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="264,276,0,0" Name="urlTxtBox" VerticalAlignment="Top" Width="227" Text="URL with %s in place of query" Foreground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" GotFocus="urlTxtBox_GotFocus" LostFocus="urlTxtBox_LostFocus" KeyDown="urlTxtBox_KeyDown" />
-        <ListBox Height="258" HorizontalAlignment="Left" Margin="12,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="512" />
+        <ListBox Height="258" HorizontalAlignment="Left" Margin="12,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="512" ItemsSource="{Binding}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <TextBlock Text="{Binding Name}" />
+                    </DockPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <Button Content="+" Height="23" HorizontalAlignment="Left" Margin="497,276,0,0" Name="addBtn" VerticalAlignment="Top" Width="27" Click="addBtn_Click" />
     </Grid>
 </Window>
