--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IE_Search_Shortcuts.MainWindow"
+﻿<Window x:Class="IESearchShortcuts.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="IE Search Shortcuts" Height="350" Width="561" Loaded="Window_Loaded">
@@ -10,7 +10,12 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
-                        <TextBlock Text="{Binding Name}" />
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}" />
+                            <TextBlock Text="{Binding Keyword}" />
+                            <TextBlock Text="{Binding URL}" />
+                            
+                        </StackPanel>
                     </DockPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
