--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -11,10 +11,10 @@
                 <DataTemplate>
                     <DockPanel>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Name}" />
-                            <TextBlock Text="{Binding Keyword}" />
-                            <TextBlock Text="{Binding URL}" />
-                            
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Name, Mode=TwoWay}" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Keyword, Mode=TwoWay}" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,10,0" VerticalAlignment="Top" Width="120" Text="{Binding URL, Mode=TwoWay}" />
+                            <Button Content="X" Click="Button_Click" />
                         </StackPanel>
                     </DockPanel>
                 </DataTemplate>
