--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -6,14 +6,14 @@
         <TextBox Height="23" HorizontalAlignment="Left" Margin="12,276,0,0" Name="nameTxtBox" VerticalAlignment="Top" Width="120" Text="Add New Shortcut" GotFocus="nameTxtBox_GotFocus" LostFocus="nameTxtBox_LostFocus" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="138,276,0,0" Name="keywordTxtBox" VerticalAlignment="Top" Width="120" Text="Keyword" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="keywordTxtBox_GotFocus" LostFocus="keywordTxtBox_LostFocus" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="264,276,0,0" Name="urlTxtBox" VerticalAlignment="Top" Width="227" Text="URL with %s in place of query" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="urlTxtBox_GotFocus" LostFocus="urlTxtBox_LostFocus" />
-        <ListBox Height="258" HorizontalAlignment="Left" Margin="12,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="512" ItemsSource="{Binding}">
+        <ListBox Height="258" HorizontalAlignment="Left" Margin="0,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="536" ItemsSource="{Binding}" BorderThickness="0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
                         <StackPanel Orientation="Horizontal">
                             <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Name, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Keyword, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,10,0" VerticalAlignment="Top" Width="120" Text="{Binding URL, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="5,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Keyword, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
+                            <TextBox Height="23" HorizontalAlignment="Left" Margin="5,10,10,0" VerticalAlignment="Top" Width="227" Text="{Binding URL, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
                             <Button Content="X" Click="Button_Click" />
                         </StackPanel>
                     </DockPanel>
