--- a/IE Search Shortcuts/MainWindow.xaml
+++ b/IE Search Shortcuts/MainWindow.xaml
@@ -1,25 +1,31 @@
 ﻿<Window x:Class="IESearchShortcuts.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="IE Search Shortcuts" Height="350" Width="561" Loaded="Window_Loaded">
-    <Grid Width="536">
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="12,276,0,0" Name="nameTxtBox" VerticalAlignment="Top" Width="120" Text="Add New Shortcut" GotFocus="nameTxtBox_GotFocus" LostFocus="nameTxtBox_LostFocus" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="138,276,0,0" Name="keywordTxtBox" VerticalAlignment="Top" Width="120" Text="Keyword" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="keywordTxtBox_GotFocus" LostFocus="keywordTxtBox_LostFocus" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="264,276,0,0" Name="urlTxtBox" VerticalAlignment="Top" Width="227" Text="URL with %s in place of query" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="urlTxtBox_GotFocus" LostFocus="urlTxtBox_LostFocus" />
-        <ListBox Height="258" HorizontalAlignment="Left" Margin="0,12,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="536" ItemsSource="{Binding}" BorderThickness="0">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <DockPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Name, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="5,10,0,0" VerticalAlignment="Top" Width="120" Text="{Binding Keyword, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="5,10,10,0" VerticalAlignment="Top" Width="227" Text="{Binding URL, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
-                            <Button Content="X" Click="Button_Click" />
-                        </StackPanel>
-                    </DockPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Button Content="+" Height="23" HorizontalAlignment="Left" Margin="497,276,0,0" Name="addBtn" VerticalAlignment="Top" Width="27" Click="addBtn_Click" />
-    </Grid>
+        Title="IE Search Shortcuts" Height="606" Width="572" Loaded="Window_Loaded">
+    <ScrollViewer>
+        <StackPanel Width="536" Height="Auto">
+            <ListBox HorizontalAlignment="Left" Margin="0,10,0,0" Name="shortcutListBox" VerticalAlignment="Top" Width="536" ItemsSource="{Binding}" BorderThickness="0">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <DockPanel MouseEnter="DockPanel_MouseEnter">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Height="23" HorizontalAlignment="Left" Margin="4,5,0,5" Stretch="Fill" VerticalAlignment="Top" Width="23" Source="/IE%20Search%20Shortcuts;component/images/globe.png" />
+                                <TextBox Height="23" HorizontalAlignment="Left" Margin="5,5,0,5" VerticalAlignment="Top" Width="126" Text="{Binding Name, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
+                                <TextBox Height="23" HorizontalAlignment="Left" Margin="5,5,0,5" VerticalAlignment="Top" Width="110" Text="{Binding Keyword, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
+                                <TextBox Height="23" HorizontalAlignment="Left" Margin="5,5,10,5" VerticalAlignment="Top" Width="207" Text="{Binding URL, Mode=TwoWay}" LostFocus="TextBox_LostFocus" />
+                                <Button Content="X" Click="Button_Click" />
+                            </StackPanel>
+                        </DockPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <StackPanel Orientation="Horizontal">
+                <Image Height="23" HorizontalAlignment="Left" Name="globe" Stretch="Fill" VerticalAlignment="Top" Width="23" Source="/IE%20Search%20Shortcuts;component/images/globe.png" Margin="7,0,0,0" />
+                <TextBox Height="23" HorizontalAlignment="Left" Name="nameTxtBox" VerticalAlignment="Top" Width="126" Text="Add New Shortcut" GotFocus="nameTxtBox_GotFocus" LostFocus="nameTxtBox_LostFocus" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" Margin="5,0,0,0" />
+                <TextBox Height="23" HorizontalAlignment="Right" Name="keywordTxtBox" VerticalAlignment="Top" Width="110" Text="Keyword" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="keywordTxtBox_GotFocus" LostFocus="keywordTxtBox_LostFocus" Margin="5,0,0,0" />
+                <TextBox Height="23" HorizontalAlignment="Right" Name="urlTxtBox" VerticalAlignment="Top" Width="207" Text="URL with %s in place of query" Foreground="{StaticResource {x:Static SystemColors.InactiveCaptionBrushKey}}" GotFocus="urlTxtBox_GotFocus" LostFocus="urlTxtBox_LostFocus" Margin="5,0,0,0" />
+                <Button Content="+" Height="23" HorizontalAlignment="Left" Name="addBtn" VerticalAlignment="Top" Width="27" Click="addBtn_Click" Margin="5,0,0,0" />
+            </StackPanel>
+        </StackPanel>
+    </ScrollViewer>
 </Window>
